# zuri-cloud-api

./: .env.example  .gitignore  README.md  core.py  db.py  lightweight_pi_client.py  main.py  pyproject.toml  zuri_hosted.db
alembic/: env.py
alembic/versions/: e1ff91f8aac8_initial_migration_clean.py
models/: v2.py
routers/: internal.py  v1.py  v2.py
schemas/: v2.py
templates/: footer.html  home.html  navbar.html
utils/: helper.py  versioning.py
